--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,14 +13,18 @@ body {
 .alertContainer {
   width: 100%;
   height: 100%;
+  left: 0;
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   direction: rtl;
   position: fixed;
   backdrop-filter: blur(5px);
   background-color: #0000002d;
   font-size: 20px;
+  padding: 0 5px;
   text-shadow: 0 0 5px #eee;
   z-index: 2;
   p {
