--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,6 +3,8 @@
   margin: 0;
   box-sizing: border-box;
   font-family: vazir;
+  user-select: none;
+  user-zoom: none;
 }
 body {
   position: relative;
@@ -48,8 +50,44 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     input[type="file"] {
       display: none;
+    }
+    input[type="range"] {
+      position: absolute;
+      left: -50px;
+      top: 45%;
+      transform: translate(0, -50%);
+      rotate: 90deg;
+      outline: 0;
+    }
+    .audioTime {
+      width: 100%;
+      height: 15px;
+      margin: 10px 0;
+      background-color: #cecece;
+      border-radius: 20px;
+      position: relative;
+      .circleTime {
+        display: inline-block;
+        max-width: 100%;
+        width: 500px;
+        height: 100%;
+        position: absolute;
+        left: 0px;
+        background-color: #ff0000;
+        border-radius: 20px;
+      }
+      .circleTime::after {
+        content: "";
+        width: 15px;
+        height: 15px;
+        right: 0;
+        border-radius: 50%;
+        position: absolute;
+        background-color: #000;
+      }
     }
     .fileName {
       width: 100%;
